Grace/tests/gibbs/errors/t182.grace
// ERROR = P1004
match 2)
    case { 1 -> print "1" }
    case { 2 -> print "2" }
    case { 3 -> print "3" }
